--- a/cliente/src/app/components/home/home.component.html
+++ b/cliente/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div>
+<section class="fade-in vh-100">
 <app-navbar></app-navbar>
 <div class="container mt-3">
     <div class="row">
@@ -13,6 +13,6 @@
         </div>
       </div>
   </div>
-        </div>
+</section>
 
 
