--- a/cliente/src/app/components/navbar/navbar.component.html
+++ b/cliente/src/app/components/navbar/navbar.component.html
@@ -10,19 +10,26 @@
         <a class="nav-link" href="#"></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Asociarse</a>
+        <a class="nav-link" (click)="asociarse()">Asociarse</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Mi Historial</a>
+        <a *ngIf="this.usuario.id != -1"  class="nav-link" href="#">Mi Historial</a>
       </li>
     </ul>
-
     <form class="form-inline my-2 my-lg-0">
       <div class="input-group">
-        <a *ngIf="this.usuario.id == -1" href="#" class="btn btn-outline-primary my-2 my-sm-0 ml-2 text-white">Registrarse</a>
+        <a *ngIf="this.usuario.id == -1"  class="btn btn-outline-primary my-2 my-sm-0 ml-2 text-white" (click)="registrarse()">Registrarse</a>
         <a *ngIf="this.usuario.id == -1" class="btn btn-outline-primary my-2 my-sm-0 ml-2 text-white" (click)="ingresar()" >Ingresar</a>
-        <a *ngIf="this.usuario.id != -1" class="btn btn-outline-primary my-2 my-sm-0 ml-2 text-white" (click)="opciones()"><i class="fa fa-user"></i>  {{this.usuario.nombre}}  </a>
-        <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+
+        <div ngbDropdown  class="search-dropdown-container" >
+          <button *ngIf="this.usuario.id != -1" class="btn btn-primary" id="dropdownBasic1" ngbDropdownToggle><i class="fa fa-user"></i>  {{this.usuario.nombre}}  </button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button ngbDropdownItem>Mis motos.</button>
+            <button ngbDropdownItem>Mis tarjetas</button>
+            <button ngbDropdownItem>Salir</button>
+          </div>
+        </div>
+        <input class=" form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
         <div class="input-group-append">
           <button class="btn btn-outline-success my-2 my-sm-0 btn-green" type="submit">Buscar</button>
           
