--- a/cliente/src/app/components/home/home.component.html
+++ b/cliente/src/app/components/home/home.component.html
@@ -2,7 +2,11 @@
 <app-navbar></app-navbar>
 <div class="container mt-3">
     <div class="row">
-        <div class="col-sm-4 mb-3" *ngFor="let img of images">
+        <div class="col-sm-4 mb-3" *ngFor="let img of images|
+        paginate: {
+        itemsPerPage: pageSize,
+        currentPage: p
+        };let i=index">
           <div class="card mb-3 custom-card">
             <img [src]="img.src" class="card-img-top custom-img" alt="...">
             <div class="card-body">
@@ -13,6 +17,12 @@
         </div>
       </div>
   </div>
+  <div class="container">
+    <div class="row center-align">
+      <pagination-controls class="my-pagination" (pageChange)="p = ($event)" previousLabel="" nextLabel=""></pagination-controls>
+    </div>
+  </div>
+  
 </section>
 
 
