--- a/cliente/src/app/components/login/login.component.html
+++ b/cliente/src/app/components/login/login.component.html
@@ -24,10 +24,19 @@
                 placeholder="Ingresa tu correo electrónico " />
             </div>
             <label class="form-label fw-bold" for="password">Contraseña:</label>
-            <div class="form-outline mb-3">
-              <input [(ngModel)]="usuario.clave"  [ngModelOptions]="{ standalone: true }"  type="password" id="password" class="form-control form-control-lg"
-                placeholder="Escribe tu contraseña" />
+            
+            <div class="form-outline mb-3" style="display: flex; align-items: center;">
+              <input type="{{inputType}}" [(ngModel)]="usuario.clave" [ngModelOptions]="{ standalone: true }" type="password" id="password"
+                class="form-control form-control-lg" placeholder="Escribe tu contraseña" style="flex: 1; margin-right: 10px;">
+              <button *ngIf="!ver" type="button" class="btn btn-outline-secondary" (click)="visualizar()">
+                <i class="fa fa-eye"></i>
+              </button>
+              <button *ngIf="ver" type="button" class="btn btn-outline-secondary" (click)="visualizar()">
+                <i class="fa fa-eye-slash"></i>
+              </button>
             </div>
+            
+
             <div class="d-flex justify-content-between align-items-center">
               <button type="button" class="btn btn-primary btn-lg"
                 style="padding-left: 2.5rem; padding-right: 2.5rem;" (click)="ingresar()">Aceptar</button>
