--- a/cliente/src/app/components/login/login.component.html
+++ b/cliente/src/app/components/login/login.component.html
@@ -2,13 +2,13 @@
     <div class="container-fluid h-custom">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-md-9 col-lg-6 col-xl-5">
-          <img src="https://img.freepik.com/vector-premium/illistration-dibujos-animados-vector-mujer-bonita-monta-bicicleta-chica-gafas-sol-moto_253349-1656.jpg"
+          <img src="assets\images\recursos\imagenHome.jpg"
             class="img-fluid" alt="MotoSoft">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
           <form>
             <div class="text-center">
-              <img src="https://images.wuzzuf-data.net/files/company_covers/thumbs/a87c906f1bb16f752fe2405881b4649e.jpeg"
+              <img src="assets\images\recursos\logo.jpeg"
             class="img-fluid" alt="MotoSoft">
               <p class="lead fw-normal mb-0 me-3">Con Motosoft, la emoción está en cada kilómetro.</p>
             </div>
