--- a/cliente/src/app/components/home/home.component.html
+++ b/cliente/src/app/components/home/home.component.html
@@ -2,16 +2,16 @@
 <app-navbar></app-navbar>
 <div class="container mt-3">
     <div class="row">
-        <div class="col-sm-4 mb-3" *ngFor="let img of images|
+        <div class="col-sm-4 mb-3" *ngFor="let moto of motos|
         paginate: {
         itemsPerPage: pageSize,
         currentPage: p
         };let i=index">
-          <div class="card mb-3 custom-card">
-            <img [src]="img.src" class="card-img-top custom-img" alt="...">
+          <div class="card mb-3 custom-card" (click)="vermoto(moto.id)">
+            <img src="assets\images\recursos\ejemploMoto.jpg" class="card-img-top custom-img" alt="...">
             <div class="card-body">
-              <h5 class="card-title">{{img.title}}</h5>
-              <p class="card-text">{{img.description}}</p>
+              <h5 class="card-title">{{moto.marca}} {{moto.modelo}}</h5>
+              <p class="card-text">{{moto.descripcion}}</p>
             </div>
           </div>
         </div>
