Añadida incidencia en el cliente, sin efecto de enviar aún

--- a/cliente/src/app/components/navbar/navbar.component.html
+++ b/cliente/src/app/components/navbar/navbar.component.html
@@ -26,6 +26,8 @@
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
             <button ngbDropdownItem>Mis motos.</button>
             <button ngbDropdownItem>Mis tarjetas</button>
+            <!-- TODO Agregar funcionalidad a reportar incidencia  -->
+            <button ngbDropdownItem (click) = "incidencia()">Reportar incidencia</button>
             <button ngbDropdownItem (click) = "salir()">Salir</button>
           </div>
         </div>
