--- a/cliente/src/app/components/rent/rent.component.html
+++ b/cliente/src/app/components/rent/rent.component.html
@@ -1,71 +1,71 @@
 <section>
-    <app-navbar></app-navbar>
-    <div class="container" style="margin-top: 1em;">
-        <div class="card person-card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6 5em;">
-                        <div class="card">
-                            <div class="card-body">
-                                <img class="w-100 rounded" src="assets\images\recursos\ejemploMoto.jpg" alt="moto.marca moto.modelo">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card"> 
-                            <div class="card-body" >
-                                <h1 class="" style="text-align:center"> {{moto.marca}} {{moto.modelo}} </h1>
-                                <hr class="my-4">
-                                <h2 class="mb-1" style="display: inline-block;">$ {{moto.costo}}.00</h2><span style="display: inline-block;"> (Por día)</span>
-                                <button class="btn btn-primary mt-2 w-100" (click)="rentar()">Rentar</button>
-                                <p class="mb-1"><strong>Descripcion del producto:</strong></p>
-                                <p class="mb-1">{{moto.descripcion}}</p>
-                                <table class="table table-striped mt-3">
-                                    <tbody>
-                                        <tr>
-                                            <th scope="col" colspan="2" style="text-align:center">Características destacadas</th>
-                                        </tr>
-                                        <tr>
-                                        <th>Año</th>
-                                        <td>{{moto.fecha_registro}}</td>
-                                      </tr>
-                                      <tr>
-                                        <th>Condición</th>
-                                        <td>{{moto.condicion}}</td>
-                                      </tr>
-                                      <tr>
-                                        <th>Kilometraje</th>
-                                        <td>{{moto.kilometraje}}</td>
-                                      </tr>
-                                      <tr>
-                                        <th>Cilindrada</th>
-                                        <td>{{moto.cilindraje}}</td>
-                                      </tr>
-                                      <tr>
-                                        <th>Número de serie</th>
-                                        <td>{{moto.numero_serie}}</td>
-                                      </tr>
-                                      <tr>
-                                        <th>Combustible</th>
-                                        <td>{{moto.combustible}}</td>
-                                      </tr>
-                                      <tr>
-                                        <th>Color</th>
-                                        <td>{{moto.color}}</td>
-                                      </tr>
-                                    </tbody>
-                                  </table>
-                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+  <app-navbar></app-navbar>
+  <div class="container" style="margin-top: 1em;">
+    <div class="card person-card">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-6 5em;">
+            <div class="card">
+              <div class="card-body">
+                <img class="w-100 rounded" src="assets\images\recursos\ejemploMoto.jpg" alt="moto.marca moto.modelo">
+              </div>
             </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <h1 class="" style="text-align:center"> {{moto.marca}} {{moto.modelo}} </h1>
+                <hr class="my-4">
+                <h2 class="mb-1" style="display: inline-block;">$ {{moto.costo}}.00</h2><span
+                style="display: inline-block;"> (Por día)</span>
+                <button class="btn btn-primary mt-2 w-100" (click)="rentar()">Rentar</button>
+                <p class="mb-1"><strong>Descripcion del producto:</strong></p>
+                <p class="mb-1">{{moto.descripcion}}</p>
+                <table class="table table-striped mt-3">
+                  <tbody>
+                  <tr>
+                    <th scope="col" colspan="2" style="text-align:center">Características destacadas</th>
+                  </tr>
+                  <tr>
+                    <th>Año</th>
+                    <td>{{moto.fecha_registro}}</td>
+                  </tr>
+                  <tr>
+                    <th>Condición</th>
+                    <td>{{moto.condicion}}</td>
+                  </tr>
+                  <tr>
+                    <th>Kilometraje</th>
+                    <td>{{moto.kilometraje}}</td>
+                  </tr>
+                  <tr>
+                    <th>Cilindrada</th>
+                    <td>{{moto.cilindraje}}</td>
+                  </tr>
+                  <tr>
+                    <th>Número de serie</th>
+                    <td>{{moto.numero_serie}}</td>
+                  </tr>
+                  <tr>
+                    <th>Combustible</th>
+                    <td>{{moto.combustible}}</td>
+                  </tr>
+                  <tr>
+                    <th>Color</th>
+                    <td>{{moto.color}}</td>
+                  </tr>
+                  </tbody>
+                </table>
+
+              </div>
+            </div>
+          </div>
         </div>
-        
-        
-        
-</div>
+
+      </div>
+    </div>
+
+
+  </div>
 
 </section>
