--- a/cliente/src/app/components/navbar/navbar.component.html
+++ b/cliente/src/app/components/navbar/navbar.component.html
@@ -36,12 +36,20 @@
             <button ngbDropdownItem (click)="salir()">Salir</button>
           </div>
         </div>
+
         <input class="mr-sm-2" placeholder="Buscar" type="search" name="busqueda"
                [(ngModel)]="busqueda"/>
         <div class="input-group-append">
+          <select class="custom-select" id="inputGroupSelect02" name="tipo" [(ngModel)]="tipo">
+            <option value="1" selected>Marca</option>
+            <option value="2">Modelo</option>
+            <option value="3">Kilometraje</option>
+          </select>
           <button class="btn btn-outline-success my-2 my-sm-0 btn-green" (click)="buscar()">Buscar
           </button>
         </div>
+
+
       </div>
     </form>
   </div>
