Agregados los modelos de las clases

--- a/cliente/src/app/components/busqueda/busqueda.component.html
+++ b/cliente/src/app/components/busqueda/busqueda.component.html
@@ -24,4 +24,13 @@
     </div>
   </div>
 
+
+  <div class="alert alert-danger" role="alert" *ngIf="coincidencia"
+  >
+    <div class="text-center">
+      No se han encontrado coincidencias.
+    </div>
+
+  </div>
+
 </section>
