--- a/cliente/src/app/components/incidencia/incidencia.component.html
+++ b/cliente/src/app/components/incidencia/incidencia.component.html
@@ -24,7 +24,7 @@
        style="color: #fff; background-color: #3bdc35; border-color: #3bdc35;">
     <div class="text-center">
       Reporte envíado correctamente.
-      Número de reporte: {{numeroReporte}}
+      Número de reporte: {{incidencia_objeto.id}}
     </div>
 
   </div>
