--- a/cliente/src/app/components/navbar/navbar.component.html
+++ b/cliente/src/app/components/navbar/navbar.component.html
@@ -13,9 +13,6 @@
       <li class="nav-item">
         <a class="nav-link" (click)="asociarse()">Asociarse</a>
       </li>
-      <li class="nav-item">
-        <a *ngIf="this.usuario.id != -1" class="nav-link" href="#">Mi Historial</a>
-      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <div class="input-group">
@@ -28,8 +25,7 @@
           <button *ngIf="this.usuario.id != -1" class="btn btn-primary" id="dropdownBasic1" ngbDropdownToggle><i
             class="fa fa-user"></i>  {{this.usuario.nombre}}  </button>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-            <button ngbDropdownItem>Mis motos.</button>
-            <button ngbDropdownItem>Mis tarjetas</button>
+            <button ngbDropdownItem (click)="tarjetas()">Mis tarjetas</button>
             <button ngbDropdownItem (click)="reservas()">Mis reservas</button>
             <!-- TODO Agregar funcionalidad a reportar incidencia  -->
             <button ngbDropdownItem (click)="incidencia()">Reportar incidencia</button>
